--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ghbdtn</h1>
+    <h1>привет</h1>
+        <section>секция</section>
+        <p>абзац</p>
+        <a>посилання</a>
+
+    <button>knopla</button>
+
+
+
+
+
 </body>
 </html>
