--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>привет</h1>
-        <section>секция</section>
-        <p>абзац</p>
-        <a>посилання</a>
+    <section>секция</section>
+    <p>абзац</p>
+    <a>посилання</a>
 
     <button>knopla</button>
 
-
-
-
-
-</body>
+    pft,
+  </body>
 </html>
